<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <TextView
        android:id="@+id/inputServerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/server_url"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/inputServerEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputServerTitle"
        android:background="@drawable/bg_edittext"
        android:maxLines="1"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/input_server_url"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/inputServerOKBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputServerEdit"
        android:layout_marginTop="10dp"
        android:text="OK"
        style="@style/MaterialButtonAppTheme"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/inputServerCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/inputServerOKBtn"
        app:layout_constraintTop_toBottomOf="@+id/inputServerEdit"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/cancel"
        style="@style/MaterialButtonAppTheme"
        />
</androidx.constraintlayout.widget.ConstraintLayout>