<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:id="@+id/resetpwdLoadingBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/resetpwdHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <com.huazun.mydemo.ui.views.TogglePasswordVisibilityEditText
        android:id="@+id/resetpwdPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpwdHintText"
        android:layout_margin="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/login_password_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpwdPasswordEdit"
        android:layout_margin="20dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpwdCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            style="@style/ButtonAppTheme"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpwdYesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="0dp"
            android:backgroundTint="@color/colorPrimaryDark"
            style="@style/ButtonAppTheme"
            android:layout_marginStart="100dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>