<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploadFilesTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#DDDDDD"
        >
        <ImageView
            android:id="@+id/uploadFilesBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/back"/>
        <ImageView
            android:id="@+id/uploadFilesSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/settings"
            />
        <ImageView
            android:id="@+id/uploadFilesBTStatusImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/uploadFilesSettingsBtn"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/point_grey"
            />
        <TextView
            android:id="@+id/uploadFilesBTStatusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/uploadFilesBackBtn"
            app:layout_constraintRight_toLeftOf="@+id/uploadFilesBTStatusImage"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text="No Connect"
            android:textSize="16sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/uploadFilesProgressBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/uploadFilesTitleLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/uploadFilesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/uploadFilesProgressBar"
        app:layout_constraintBottom_toTopOf="@+id/uploadFilesBtnLayout"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploadFilesBtnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadFilesComeDiskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/come_from_disk"
            style="@style/MaterialButtonAppTheme"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadFilesComeBTBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/uploadFilesComeDiskBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"
            android:text="@string/come_from_bt"
            style="@style/MaterialButtonAppTheme"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadFilesUploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/uploadFilesComeBTBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"
            android:text="@string/upload"
            style="@style/MaterialButtonAppTheme"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>